refactor: simplify catalog query API